--- a/00_estilos.css
+++ b/00_estilos.css
@@ -75,20 +75,6 @@ body.inicio {
     padding: 15px;    
 }
 
-.texto_02{
-    color: black;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 15px;
-    
-    padding: 0px ;
-    margin-top: 50px;
-    margin-bottom: 50px;
-
-    text-align: left;
-    margin-left: 50px;
-    width: 45%;
-
-}
 
 
 .contenedor_foto {
@@ -113,29 +99,7 @@ body.inicio {
 
 
 
-/*AIUDAAAAAAAAAAAA*/
-.texto_portfolio{
-    color: black;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 15px;
 
-    padding: 0px ;
-    margin-top: 50px;
-    margin-bottom: 50px;
-
-    text-align: left;
-    margin-left: 50px;
-    width: 45%;
-}
-
-.texto_02{
-    color: black;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 18px;
-    padding: 5px 0;
-    margin-top: 10px;
-
-}
 
 
 
@@ -231,6 +195,10 @@ body.inicio {
 
 
 /*PORTADA__________01_joyeria*/
+
+
+
+
 /*imagen principal*/
 
 /*Para diferenciarlos!!
@@ -259,19 +227,11 @@ body.inicio {
 .imagen_principal img{
   width: 100%;
   height: 100%;
-  object-fit: cover; /* Llena el marco de 600px sin deformarse */
-  object-position: center center; /* Ajusta según si quieres ver más el collar/modelo */
+  object-fit: cover; 
+  object-position: center center; 
   display: block;
   
-  /*transform: rotate(90deg) scale(1.3);*/
 }
-
-/*
-img [src="03_portfolio_01_maquillaje/01_maquillaje_01_"]{
-    transform: rotate(90deg);
-}*/
-
-
 
 
 
